--- a/apache-dubbo/dubbo-provider/src/main/resources/application.properties
+++ b/apache-dubbo/dubbo-provider/src/main/resources/application.properties
@@ -13,3 +13,6 @@ dubbo.protocol.port=10010
 dubbo.registry.address=N/A
 ## DemoService version
 demo.service.version=1.0.0
+
+## add dubbo-actuator
+spring.profiles.active=actuator
