--- a/apache-dubbo/pom.xml
+++ b/apache-dubbo/pom.xml
@@ -40,14 +40,15 @@
 
     <dependencyManagement>
         <dependencies>
-            <!-- Apache Dubbo  -->
-          <!--  <dependency>
+            <!-- Apache Dubbo
+            <dependency>
                 <groupId>org.apache.dubbo</groupId>
                 <artifactId>dubbo-dependencies-bom</artifactId>
                 <version>${apache-dubbo.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
-            </dependency>-->
+            </dependency>
+            -->
 
             <!-- Dubbo Spring Boot Starter -->
             <dependency>
@@ -74,6 +75,12 @@
                         <artifactId>log4j</artifactId>
                     </exclusion>
                 </exclusions>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.dubbo</groupId>
+                <artifactId>dubbo-spring-boot-actuator</artifactId>
+                <version>${apache-dubbo.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
