--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
         <java.version>1.8</java.version>
 
         <spring-boot-dependencies.version>2.2.1.RELEASE</spring-boot-dependencies.version>
-        <spring-cloud-dependencies.version>Greenwich.RELEASE</spring-cloud-dependencies.version>
+        <spring-cloud-dependencies.version>Hoxton.RELEASE</spring-cloud-dependencies.version>
 
         <alibaba-druid.version>1.1.14</alibaba-druid.version>
 
