--- a/apache-dubbo/dubbo-consumer/pom.xml
+++ b/apache-dubbo/dubbo-consumer/pom.xml
@@ -7,11 +7,11 @@
     <parent>
         <artifactId>apache-dubbo</artifactId>
         <groupId>com.vergilyn.examples</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>dubbo-consumer</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
