--- a/apache-dubbo/dubbo-provider-api/pom.xml
+++ b/apache-dubbo/dubbo-provider-api/pom.xml
@@ -7,8 +7,9 @@
     <parent>
         <artifactId>apache-dubbo</artifactId>
         <groupId>com.vergilyn.examples</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>dubbo-provider-api</artifactId>
+    <packaging>jar</packaging>
 </project>
