--- a/common/pom.xml
+++ b/common/pom.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>com.vergilyn.examples</groupId>
-        <artifactId>spring-cloud-eureka</artifactId>
+        <artifactId>microservice-examples</artifactId>
         <version>${revision}</version>
     </parent>
 
-    <artifactId>cloud-eureka-server</artifactId>
-    <packaging>jar</packaging>
+    <artifactId>common-dependencies</artifactId>
+    <packaging>pom</packaging>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
-        </dependency>
-    </dependencies>
+    <modules>
+        <module>vergilyn-common-autoconfigure</module>
+        <module>vergilyn-common-dependencies</module>
+    </modules>
 </project>
