--- a/common/vergilyn-common-dependencies/pom.xml
+++ b/common/vergilyn-common-dependencies/pom.xml
@@ -6,13 +6,12 @@
 
     <parent>
         <groupId>com.vergilyn.examples</groupId>
-        <artifactId>microservice-examples</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
-        <relativePath>../../pom.xml</relativePath>
+        <artifactId>common-dependencies</artifactId>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>vergilyn-common-dependencies</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
