--- a/spring-cloud-alibaba/cloud-alibaba-auth/pom.xml
+++ b/spring-cloud-alibaba/cloud-alibaba-auth/pom.xml
@@ -7,10 +7,11 @@
     <parent>
         <artifactId>spring-cloud-alibaba</artifactId>
         <groupId>com.vergilyn.examples</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>cloud-alibaba-auth</artifactId>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
