--- a/spring-cloud-alibaba/cloud-alibaba-client-order/pom.xml
+++ b/spring-cloud-alibaba/cloud-alibaba-client-order/pom.xml
@@ -7,11 +7,11 @@
     <parent>
         <groupId>com.vergilyn.examples</groupId>
         <artifactId>spring-cloud-alibaba</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>cloud-alibaba-client-order</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
@@ -47,13 +47,14 @@
         <dependency>
             <groupId>com.vergilyn.examples</groupId>
             <artifactId>vergilyn-common-autoconfigure</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.vergilyn.examples</groupId>
             <artifactId>vergilyn-common-dependencies</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${project.version}</version>
+
         </dependency>
     </dependencies>
 
