--- a/spring-cloud-alibaba/pom.xml
+++ b/spring-cloud-alibaba/pom.xml
@@ -7,11 +7,10 @@
     <parent>
         <groupId>com.vergilyn.examples</groupId>
         <artifactId>microservice-examples</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>spring-cloud-alibaba</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
