--- a/spring-cloud-eureka/cloud-eureka-client-storage/pom.xml
+++ b/spring-cloud-eureka/cloud-eureka-client-storage/pom.xml
@@ -7,10 +7,11 @@
     <parent>
         <groupId>com.vergilyn.examples</groupId>
         <artifactId>spring-cloud-eureka</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>cloud-eureka-client-storage</artifactId>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
@@ -29,20 +30,15 @@
         </dependency>
 
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-        </dependency>
-
-        <dependency>
             <groupId>com.vergilyn.examples</groupId>
             <artifactId>vergilyn-common-autoconfigure</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.vergilyn.examples</groupId>
             <artifactId>vergilyn-common-dependencies</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
