--- a/spring-cloud-eureka/pom.xml
+++ b/spring-cloud-eureka/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.vergilyn.examples</groupId>
         <artifactId>microservice-examples</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>spring-cloud-eureka</artifactId>
@@ -22,7 +22,4 @@
         <module>cloud-eureka-server</module>
     </modules>
 
-    <properties>
-
-    </properties>
 </project>
