maven: upgrade spring-cloud version, "Hoxton.RELEASE -> Hoxton.SR12".

--- a/spring-cloud-eureka/cloud-eureka-client-merge-business/src/main/resources/application.yml
+++ b/spring-cloud-eureka/cloud-eureka-client-merge-business/src/main/resources/application.yml
@@ -5,4 +5,8 @@ spring:
   application:
     name: cloud-eureka-client-merge-business
   profiles:
-    active: actuator, eureka, feign, hystrix
+    active:
+      - actuator
+      - eureka
+      - feign
+      - hystrix
