--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
         <revision>1.0.0-SNAPSHOT</revision>
 
         <spring-boot-dependencies.version>2.2.11.RELEASE</spring-boot-dependencies.version>
-        <spring-cloud-dependencies.version>Hoxton.RELEASE</spring-cloud-dependencies.version>
+        <spring-cloud-dependencies.version>Hoxton.SR12</spring-cloud-dependencies.version>
 
         <projectlombok.version>1.18.10</projectlombok.version>
         <google-guava.version>30.0-jre</google-guava.version>
