feature: spring-cloud-openFeign, mock unit test.

--- a/spring-cloud-eureka/cloud-eureka-client-merge-business/src/main/resources/application-eureka.yml
+++ b/spring-cloud-eureka/cloud-eureka-client-merge-business/src/main/resources/application-eureka.yml
@@ -1,6 +1,9 @@
 # eureka-client
 eureka:
   client:
+    enabled: true
     service-url:
       defaultZone: http://localhost:8761/eureka/
-    enabled: true
+    register-with-eureka: true
+    fetch-registry: true
+    registry-fetch-interval-seconds: 30
