--- a/apache-dubbo/pom.xml
+++ b/apache-dubbo/pom.xml
@@ -35,8 +35,10 @@
     </repositories>
 
     <properties>
-        <!-- old: 2.7.4.1  2021-09-1: 3.0.2.1-->
-        <apache-dubbo.version>2.7.4.1</apache-dubbo.version>
+        <!-- old: 2.7.4.1
+            2021-09, latest: 2.7.14 OR 3.0.3
+        -->
+        <apache-dubbo.version>2.7.13</apache-dubbo.version>
         <alibaba-nacos.version>2.0.0</alibaba-nacos.version>
     </properties>
 
